--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h2 class="byline">WE'RE GETTING MARRIED!</h2>
                 <hr>
                 <h1 class="headline">Zoe & Alex</h1>
-                <h3 class="tagline">August 1, 2018</h3>
+                <h3 class="tagline">— August 1, 2018 —</h3>
             </div>
         </div>
     </header>
