--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville&family=Mulish&display=swap"
         rel="stylesheet">
@@ -25,6 +27,30 @@
     <main>
         <div class="modul-a">
             <p class="modul-title">Locations</p>
+            <div class="row card-holder">
+                <div class="column card">
+                    <h5 class="card-title">Ceremony</h5>
+                    <img class="card-img" src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-ceremony.png" alt="Ceremony">
+                    <p>St. Nicholas Church</p>
+                    <p>2 Trinity Square, Budapest</p>
+                </div>
+                <div class="column card">
+                    <h5 class="card-title">Photos</h5>
+                    <img class="card-img"
+                        src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-photoshoot.png"
+                        alt="Photos">
+                    <p>Liberty Bastion</p>
+                    <p>23 Wisdom Road, Budapest</p>
+                </div>
+                <div class="column card">
+                    <h5 class="card-title">Party</h5>
+                    <img class="card-img"
+                        src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-party.png"
+                        alt="Party">
+                    <p>Heaven Lounge</p>
+                    <p>14 Fairy Street, Budapest</p>
+                </div>
+            </div>
         </div>
         <div class="modul-b">
             <p class="modul-title">Program</p>
