--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="icon" type="image/png" href="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville&family=Mulish&display=swap"
         rel="stylesheet">
@@ -17,7 +17,7 @@
     <header class="cover">
         <div class="wrapper">
             <div class="textbox">
-                <h2 class="byline">WE'RE GETTING MARRIED!</h2>
+                <h2 class="byline">We're getting married!</h2>
                 <hr>
                 <h1 class="headline">Zoe & Alex</h1>
                 <h3 class="tagline">— August 1, 2020 —</h3>
