--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="icon" type="image/png" href="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville&family=Mulish&display=swap"
         rel="stylesheet">
@@ -57,18 +57,24 @@
         </div>
         <div class="modul-b">
             <p class="modul-title">Program</p>
-            <p>"It's going to be somehow, that's for sure."</p>
-            <ol>
+            <p class="italic">"It's going to be somehow, that's for sure."</p>
+            <ul>
                 <li>13:45 – Wedding ceremony</li>
                 <li>14:30 – Photos</li>
                 <li>16:00 – Cocktails</li>
                 <li>18:00 – Dinner</li>
                 <li>22:00 – Cake</li>
                 <li>... - 4:00 – Dance until dawn</li>
-            </ol>
+            </ul>
         </div>
         <div class="modul-a">
-            <p class="modul-title">Gifts</p>
+            <div class="column card">
+                <p class="modul-title">Gifts</p>
+                <p>The greatest gift for us is to have you there.</p>
+                <img class="card-img" src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-gifts.png"
+                    alt="Gifts">
+                <p>Please, just bring yourself and have fun with us.</p>
+            </div>
         </div>
         <div class="modul-b">
             <p class="modul-title">Questions & Answers</p>
