--- a/index.html
+++ b/index.html
@@ -29,43 +29,51 @@
             <p class="modul-title">Locations</p>
             <div class="row card-holder">
                 <div class="column card">
-                    <h5 class="card-title">Ceremony</h5>
-                    <img class="card-img" src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-ceremony.png" alt="Ceremony">
-                    <p>St. Nicholas Church</p>
-                    <p>2 Trinity Square, Budapest</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Ceremony</h5>
+                        <img class="card-img" src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-ceremony.png" alt="Ceremony">
+                        <p class="card-text">St. Nicholas Church</p>
+                        <p class="card-text">2 Trinity Square, Budapest</p>
+                    </div>
                     <hr>
                 </div>
                 <div class="column card">
-                    <h5 class="card-title">Photos</h5>
-                    <img class="card-img"
-                        src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-photoshoot.png"
-                        alt="Photos">
-                    <p>Liberty Bastion</p>
-                    <p>23 Wisdom Road, Budapest</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Photos</h5>
+                        <img class="card-img"
+                            src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-photoshoot.png"
+                            alt="Photos">
+                        <p class="card-text">Liberty Bastion</p>
+                        <p class="card-text">23 Wisdom Road, Budapest</p>
+                    </div>
                     <hr>
                 </div>
                 <div class="column card">
-                    <h5 class="card-title">Party</h5>
-                    <img class="card-img"
-                        src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-party.png"
-                        alt="Party">
-                    <p>Heaven Lounge</p>
-                    <p>14 Fairy Street, Budapest</p>
+                    <div class="card-body">
+                        <h5 class="card-title">Party</h5>
+                        <img class="card-img"
+                            src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-party.png"
+                            alt="Party">
+                        <p class="card-text">Heaven Lounge</p>
+                        <p class="card-text">14 Fairy Street, Budapest</p>
+                    </div>
                     <hr>
                 </div>
             </div>
         </div>
         <div class="modul-b">
             <p class="modul-title">Program</p>
-            <p class="italic">"It's going to be somehow, that's for sure."</p>
-            <ul>
-                <li>13:45 – Wedding ceremony</li>
-                <li>14:30 – Photos</li>
-                <li>16:00 – Cocktails</li>
-                <li>18:00 – Dinner</li>
-                <li>22:00 – Cake</li>
-                <li>... - 4:00 – Dance until dawn</li>
-            </ul>
+            <div class="program-list">
+                <p class="italic">"It's going to be somehow, that's for sure."</p>
+                <ul>
+                    <li class="left-aligned-text">13:45 – Wedding ceremony</li>
+                    <li class="left-aligned-text">14:30 – Photos</li>
+                    <li class="left-aligned-text">16:00 – Cocktails</li>
+                    <li class="left-aligned-text">18:00 – Dinner</li>
+                    <li class="left-aligned-text">22:00 – Cake</li>
+                    <li class="left-aligned-text">... - 4:00 – Dance until dawn</li>
+                </ul>
+            </div>
         </div>
         <div class="modul-a">
             <div class="column card">
@@ -78,7 +86,29 @@
         </div>
         <div class="modul-b">
             <p class="modul-title">Questions & Answers</p>
-            <p></p>
+            <div class="row card-holder">
+                <div class="column card">
+                    <h5 class="card-title">Travel and accomodations</h5>
+                        <p class="question left-aligned-text">Will there be some kind of organized transfer?</p>
+                        <p class="left-aligned-text">2 Trinity Square, Budapest</p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="column card">
+                    <h5 class="card-title">Food and festivities</h5>
+                    
+                    <p>Liberty Bastion</p>
+                    <p>23 Wisdom Road, Budapest</p>
+                    <hr>
+                </div>
+                <div class="column card">
+                    <h5 class="card-title">Other small stuff</h5>
+                    
+                    <p>Heaven Lounge</p>
+                    <p>14 Fairy Street, Budapest</p>
+                    <hr>
+                </div>
+            </div>
         </div>
         <div class="modul-a">
             <p class="modul-title">Contact</p>
