--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
         </div>
         <div class="modul-b">
             <p class="modul-title">Program</p>
-            <div class="card">
-                <p class="card-text italic">"It's going to be somehow, that's for sure."</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-item">13:45 – Wedding ceremony</li>
-                    <li class="list-item">14:30 – Photos</li>
-                    <li class="list-item">16:00 – Cocktails</li>
-                    <li class="list-item">18:00 – Dinner</li>
-                    <li class="list-item">22:00 – Cake</li>
-                    <li class="list-item">... - 4:00 – Dance until dawn</li>
-                </ul>
+            <div class="card program-list">
+                    <p class="card-text italic">"It's going to be somehow, that's for sure."</p>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-item">13:45 – Wedding ceremony</li>
+                        <li class="list-item">14:30 – Photos</li>
+                        <li class="list-item">16:00 – Cocktails</li>
+                        <li class="list-item">18:00 – Dinner</li>
+                        <li class="list-item">22:00 – Cake</li>
+                        <li class="list-item">... - 4:00 – Dance until dawn</li>
+                    </ul>
             </div>
         </div>
         <div class="modul-a">
             <p class="modul-title">Gifts</p>
-            <div class="card baskerville">
+            <div class="card w-100 baskerville">
                 <p class="card-text text-center">The greatest gift for us is to have you there.</p>
                 <img class="card-img mx-auto d-block" src="https://orange.codeberryschool.com/content/images/project-assets/wedding-landing-gifts.png" alt="Gifts">
                 <p class="card-text text-center">Please, just bring yourself and have fun with us.</p>
@@ -120,7 +120,7 @@
                     <div class="card-body">
                         <p class="card-text font-weight-bold">I have a problem / font-weight-bold on the wedding day. With whom can I speak?</p>
                         <p class="card-text">Jared Wright on this number: <a href="#">+36 30 000 0000</a>.</p>
-                        <p class="card-text font-wei</a>ght-bold">Can we bring kids?</p>
+                        <p class="card-text font-weight-bold">Can we bring kids?</p>
                         <p class="card-text">Sure! We planned a whole toy / sweets corner for them.</p>
                         <p class="card-text font-weight-bold">How do you feel about dogs? Can I bring mine?</p>
                         <p class="card-text">We love dogs and you can absolutely bring yours. The Heaven Lounge is a dog-friendly place.</p>
@@ -132,7 +132,7 @@
 
         <div class="modul-a">
             <p class="modul-title">Contact</p>
-            <div class="card baskerville">
+            <div class="card w-100 baskerville">
                 <p class="card-text text-center">If you have any questions feel free to call / write us.</p>
                 <p class="card-text text-center">Phone: <a href="#">+36 30 000 0000</a> (Zoe) / <a href="#">+36 30 000 0000 (Alex)</a></p>
                 <p class="card-text text-center">Email: <a href="#">zoeandalex@awesomemail.com</a></p>
